.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Scrooge's user's guide.

Unreleased
----------

- scrooge-generator: Add more metadata to generated java objects ``PHAB_ID=D122997``
  Includes: 
    * struct and field annotations from the idl files
    * which fields have default values
    * which field values of TType.STRING are actually binary fields

- scrooge: Add support for `scrooge.Request` and `scrooge.Response`
  types in generated `ThriftMethod` code. ``PHAB_ID=D122767``

17.12.0
-------

- scrooge: Introduce `scrooge.Request` and `scrooge.Response` envelopes which
  are used in `ReqRepServicePerEndpoint` interfaces and associated code. The
  scrooge `Request` and `Response` allow for passing "header" information (via
  ThriftMux Message contexts) between clients and servers. For instance, a
  server can implement a `ReqRepServicePerEndpoint`, and set response headers
  along with a method response, e.g.,

  ```
  class MyService extends MyService.ReqRepServicePerEndpoint {

    def foo: Service[Request[Foo.Args], Response[Foo.SuccessType]] = {
      Service.mk[Request[Foo.Args], Response[Foo.SuccessType]] { request: Request[Foo.Args] =>
        val result = ... // computations
        Future
          .value(
            Response(
              headers = Map("myservice.foo.header" -> Seq(Buf.Utf8("value1"))),
              result)
      }
    }
  }
  ```

  This `ServicePerEndpoint` can then be served using `ThriftMux`:

  ```
  ThriftMux.server.serveIface(":9999", new MyService().toThriftService)
  ```

  These response headers will be transported as `Mux#contexts` to the client. If
  the client is using the client-side `ReqRepServicePerEndpoint` it will be able
  to read the headers from the returned `Response` directly. E.g.,

  ```
  val client = ThriftMux.client.reqRepServicePerEndpoint[MyService.ReqRepServicePerEndpoint]
